6779
This also affects mix-ins:
```scala
scala>   abstract class A {
     |     this_a =>
     |     class B {
     |       def a: this_a.type= this_a
     |     }
     |     def b= new B
     |   }
defined class A

scala>   trait A2 {
     |     def c { }
     |   }
defined trait A2

scala>   def a= new A with A2
a: A with A2

scala>   a.b.a.c
<console>:11: error: value c is not a member of A
         a.b.a.c
               ^
```
